--- a/Regression/logistic-regression.ipynb
+++ b/Regression/logistic-regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "78ed557d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "d0b71402",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "[200 rows x 28 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "4a2679ae",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
        "[8 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "3a3ab72b",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "8a9b19ae",
    "metadata": {},
    "outputs": [],
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "5d6de0a6",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "[200 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "39120d21",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "       [  7.,  35.,  14.,  80.,   2.,  15.,   0.,   1.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "61201b3a",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "b8ccfe22",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "         1.16316   ,  0.64686916]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,17 +1024,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "ab8dff5a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X_norm, Y, test_size=0.2, random_state= 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "21dc8e36",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "c60a4386",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1061,7 @@
        "       0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "c5ee62dc",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1087,7 @@
        "       [0.76478748, 0.23521252]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "d5233436",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "24a8d17d",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1150,7 @@
        "0.37996228907763124"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
