Clean restructure the repo

--- a/ML-Scikit/Linear-regression.ipynb
+++ b/ML-Scikit/Linear-regression.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d800284a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"FuelConsumptionCo2.csv\")  "
+    "df = pd.read_csv(\"../data/FuelConsumptionCo2.csv\")  "
    ]
   },
   {
