--- a/ML-Scikit/classification-regression.ipynb
+++ b/ML-Scikit/classification-regression.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8a52daf7",
    "metadata": {},
    "outputs": [
@@ -73,139 +73,139 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1133</th>\n",
+       "      <th>1564</th>\n",
        "      <td>Male</td>\n",
-       "      <td>34.098174</td>\n",
-       "      <td>1.841151</td>\n",
-       "      <td>91.798103</td>\n",
+       "      <td>30.304203</td>\n",
+       "      <td>1.703202</td>\n",
+       "      <td>103.034400</td>\n",
        "      <td>yes</td>\n",
        "      <td>yes</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.997414</td>\n",
+       "      <td>2.754645</td>\n",
+       "      <td>2.175432</td>\n",
        "      <td>Sometimes</td>\n",
        "      <td>no</td>\n",
-       "      <td>1.259454</td>\n",
+       "      <td>1.541733</td>\n",
        "      <td>no</td>\n",
-       "      <td>0.935217</td>\n",
-       "      <td>0.997600</td>\n",
-       "      <td>Sometimes</td>\n",
-       "      <td>Automobile</td>\n",
-       "      <td>Overweight_Level_II</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>1.780000</td>\n",
-       "      <td>78.000000</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>Sometimes</td>\n",
+       "      <td>0.358709</td>\n",
+       "      <td>1.073900</td>\n",
        "      <td>no</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>no</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>Sometimes</td>\n",
        "      <td>Public_Transportation</td>\n",
-       "      <td>Normal_Weight</td>\n",
+       "      <td>Obesity_Type_II</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1186</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>34.993835</td>\n",
-       "      <td>1.752456</td>\n",
-       "      <td>84.783756</td>\n",
+       "      <th>1869</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>1.621245</td>\n",
+       "      <td>111.267334</td>\n",
        "      <td>yes</td>\n",
        "      <td>yes</td>\n",
-       "      <td>2.631650</td>\n",
-       "      <td>2.982120</td>\n",
-       "      <td>Sometimes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>2.778587</td>\n",
-       "      <td>no</td>\n",
-       "      <td>2.667739</td>\n",
-       "      <td>0.905181</td>\n",
-       "      <td>no</td>\n",
-       "      <td>Automobile</td>\n",
-       "      <td>Overweight_Level_II</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1647</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>30.493946</td>\n",
-       "      <td>1.756221</td>\n",
-       "      <td>119.117122</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>2.619987</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>Sometimes</td>\n",
        "      <td>no</td>\n",
-       "      <td>2.194746</td>\n",
+       "      <td>2.605685</td>\n",
        "      <td>no</td>\n",
-       "      <td>1.076926</td>\n",
-       "      <td>1.090995</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.199227</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>Public_Transportation</td>\n",
+       "      <td>Obesity_Type_III</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1732</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>31.571392</td>\n",
+       "      <td>1.767485</td>\n",
+       "      <td>120.158049</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2.576910</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2.080187</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1.042680</td>\n",
+       "      <td>0.376683</td>\n",
        "      <td>Sometimes</td>\n",
        "      <td>Automobile</td>\n",
        "      <td>Obesity_Type_II</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1615</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>22.976188</td>\n",
-       "      <td>1.825718</td>\n",
-       "      <td>121.236915</td>\n",
+       "      <th>1258</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>19.442663</td>\n",
+       "      <td>1.627812</td>\n",
+       "      <td>82.000000</td>\n",
        "      <td>yes</td>\n",
        "      <td>yes</td>\n",
-       "      <td>2.397284</td>\n",
-       "      <td>2.892920</td>\n",
+       "      <td>1.081585</td>\n",
+       "      <td>2.870661</td>\n",
        "      <td>Sometimes</td>\n",
        "      <td>no</td>\n",
-       "      <td>1.983973</td>\n",
+       "      <td>1.117560</td>\n",
        "      <td>no</td>\n",
-       "      <td>1.859667</td>\n",
-       "      <td>0.002600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.616826</td>\n",
        "      <td>Sometimes</td>\n",
        "      <td>Public_Transportation</td>\n",
-       "      <td>Obesity_Type_II</td>\n",
+       "      <td>Obesity_Type_I</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>965</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>17.258130</td>\n",
+       "      <td>1.600184</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2.749629</td>\n",
+       "      <td>2.298612</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>0.547515</td>\n",
+       "      <td>1.619473</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>Public_Transportation</td>\n",
+       "      <td>Overweight_Level_I</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Gender        Age    Height      Weight family_history_with_overweight  \\\n",
-       "1133   Male  34.098174  1.841151   91.798103                            yes   \n",
-       "150    Male  25.000000  1.780000   78.000000                            yes   \n",
-       "1186   Male  34.993835  1.752456   84.783756                            yes   \n",
-       "1647   Male  30.493946  1.756221  119.117122                            yes   \n",
-       "1615   Male  22.976188  1.825718  121.236915                            yes   \n",
+       "      Gender        Age    Height      Weight family_history_with_overweight  \\\n",
+       "1564    Male  30.304203  1.703202  103.034400                            yes   \n",
+       "1869  Female  26.000000  1.621245  111.267334                            yes   \n",
+       "1732    Male  31.571392  1.767485  120.158049                            yes   \n",
+       "1258  Female  19.442663  1.627812   82.000000                            yes   \n",
+       "965   Female  17.258130  1.600184   65.000000                            yes   \n",
        "\n",
-       "     FAVC      FCVC       NCP       CAEC SMOKE      CH2O SCC       FAF  \\\n",
-       "1133  yes  2.000000  2.997414  Sometimes    no  1.259454  no  0.935217   \n",
-       "150   yes  2.000000  1.000000  Sometimes    no  2.000000  no  2.000000   \n",
-       "1186  yes  2.631650  2.982120  Sometimes    no  2.778587  no  2.667739   \n",
-       "1647  yes  2.619987  3.000000  Sometimes    no  2.194746  no  1.076926   \n",
-       "1615  yes  2.397284  2.892920  Sometimes    no  1.983973  no  1.859667   \n",
+       "     FAVC      FCVC       NCP       CAEC SMOKE      CH2O  SCC       FAF  \\\n",
+       "1564  yes  2.754645  2.175432  Sometimes    no  1.541733   no  0.358709   \n",
+       "1869  yes  3.000000  3.000000  Sometimes    no  2.605685   no  0.000000   \n",
+       "1732  yes  2.576910  3.000000  Sometimes    no  2.080187   no  1.042680   \n",
+       "1258  yes  1.081585  2.870661  Sometimes    no  1.117560   no  0.000000   \n",
+       "965   yes  2.749629  2.298612  Sometimes    no  2.000000  yes  0.547515   \n",
        "\n",
-       "           TUE       CALC                 MTRANS           NObeyesdad  \n",
-       "1133  0.997600  Sometimes             Automobile  Overweight_Level_II  \n",
-       "150   1.000000  Sometimes  Public_Transportation        Normal_Weight  \n",
-       "1186  0.905181         no             Automobile  Overweight_Level_II  \n",
-       "1647  1.090995  Sometimes             Automobile      Obesity_Type_II  \n",
-       "1615  0.002600  Sometimes  Public_Transportation      Obesity_Type_II  "
+       "           TUE       CALC                 MTRANS          NObeyesdad  \n",
+       "1564  1.073900         no  Public_Transportation     Obesity_Type_II  \n",
+       "1869  0.199227  Sometimes  Public_Transportation    Obesity_Type_III  \n",
+       "1732  0.376683  Sometimes             Automobile     Obesity_Type_II  \n",
+       "1258  1.616826  Sometimes  Public_Transportation      Obesity_Type_I  \n",
+       "965   1.619473  Sometimes  Public_Transportation  Overweight_Level_I  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Obesity_level_prediction_dataset.csv\")\n",
+    "df = pd.read_csv(\"../data/Obesity_level_prediction_dataset.csv\")\n",
     "df.sample(5)"
    ]
   },
