--- a/ML-Scikit/decision-tree.ipynb
+++ b/ML-Scikit/decision-tree.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "30d30ffd",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('drug200.csv')\n",
+    "df = pd.read_csv('../data/drug200.csv')\n",
     "df"
    ]
   },
