--- a/ML-Scikit/logistic-regression.ipynb
+++ b/ML-Scikit/logistic-regression.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d0b71402",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"ChurnData.csv\")\n",
+    "df = pd.read_csv(\"../data/ChurnData.csv\")\n",
     "df"
    ]
   },
