--- a/ML-Scratch/Linear-regression-numpy.ipynb
+++ b/ML-Scratch/Linear-regression-numpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 1,
    "id": "256a54c8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 2,
    "id": "5da02a15",
    "metadata": {},
    "outputs": [
@@ -296,19 +296,19 @@
        "[1067 rows x 13 columns]"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('FuelConsumptionCo2.csv')\n",
+    "df = pd.read_csv('../data/FuelConsumptionCo2.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 3,
    "id": "094a7016",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "4                  10.6                        27           244  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 4,
    "id": "a9d151c1",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 5,
    "id": "2ca45d36",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "max      488.000000  "
       ]
      },
-     "execution_count": 304,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 6,
    "id": "1053efdb",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "(1067, 13)"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 7,
    "id": "0fbda97b",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 8,
    "id": "f172641c",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 9,
    "id": "f44ed160",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "Name: CO2EMISSIONS, Length: 1067, dtype: int64"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 10,
    "id": "1f739680",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
        "[1067 rows x 8 columns]"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 11,
    "id": "2ac97796",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 12,
    "id": "9333fd41",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "[1067 rows x 4 columns]"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 13,
    "id": "674c862a",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
        "[1067 rows x 4 columns]"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 14,
    "id": "85a74c7c",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 15,
    "id": "1f3676b1",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 16,
    "id": "a421b364",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
        "Text(0, 0.5, 'FUELCONSUMPTION_COMB')"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 17,
    "id": "e336323f",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
        "(100.0, 4000.0)"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 18,
    "id": "c558c78b",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
        "array([ 8.5,  9.6,  5.9, ..., 11.8, 11.3, 12.8])"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 19,
    "id": "aada73da",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "array([196, 221, 136, ..., 271, 260, 294])"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 20,
    "id": "4030c641",
    "metadata": {},
    "outputs": [],
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 21,
    "id": "6c26e0ea",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 22,
    "id": "a80a7c2f",
    "metadata": {},
    "outputs": [
@@ -2646,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 23,
    "id": "05935cfa",
    "metadata": {},
    "outputs": [],
@@ -2656,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 24,
    "id": "04ea3f84",
    "metadata": {},
    "outputs": [
@@ -2694,7 +2694,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
