Multiple linear regression from scratch

--- a/ML-Scikit/Linear-regression.ipynb
+++ b/ML-Scikit/Linear-regression.ipynb
@@ -799,7 +799,7 @@
    "id": "082924df",
    "metadata": {},
    "source": [
-    "**Multiple Linear Regression**"
+    "# Multiple Linear Regression"
    ]
   },
   {
