--- a/ML-Scratch/Linear-regression-numpy.ipynb
+++ b/ML-Scratch/Linear-regression-numpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "256a54c8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "5da02a15",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "[1067 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "094a7016",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "4                  10.6                        27           244  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "a9d151c1",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "2ca45d36",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "max      488.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "1053efdb",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "(1067, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "0fbda97b",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "f172641c",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "f44ed160",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "Name: CO2EMISSIONS, Length: 1067, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "1f739680",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
        "[1067 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "2ac97796",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "id": "9333fd41",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "[1067 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "id": "674c862a",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
        "[1067 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "id": "85a74c7c",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "id": "1f3676b1",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "a421b364",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
        "Text(0, 0.5, 'FUELCONSUMPTION_COMB')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "id": "e336323f",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
        "(100.0, 4000.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "id": "c558c78b",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
        "array([ 8.5,  9.6,  5.9, ..., 11.8, 11.3, 12.8])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "id": "aada73da",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "array([196, 221, 136, ..., 271, 260, 294])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "4030c641",
    "metadata": {},
    "outputs": [],
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "6c26e0ea",
    "metadata": {},
    "outputs": [],
@@ -1525,15 +1525,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0ca094",
+   "id": "865c9c31",
    "metadata": {},
    "source": [
-    "Get batch out of array"
+    "*If in any case you dont want to do full batch SGD you can use this code to get any desired no of values in a batch just addjust the value of the batch_size and you are ready to go*\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "def batch_loader(arr, batch_size = 2):\n",
+    "    index = 0\n",
+    "    total = len(arr)\n",
+    "    def get_next_batch():\n",
+    "        nonlocal index\n",
+    "        if index >= total:\n",
+    "            return None\n",
+    "        end = min(index + batch_size , total)\n",
+    "        batch = arr[index : end]\n",
+    "        index = end\n",
+    "        return batch\n",
+    "    return get_next_batch\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cffd3bb8",
+   "metadata": {},
+   "source": [
+    "I am using full batch SGD so i didnt have to use it..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "id": "a80a7c2f",
    "metadata": {},
    "outputs": [
@@ -2548,50 +2572,18 @@
     }
    ],
    "source": [
-    "import random\n",
-    "\n",
-    "def batch_loader(arr, batch_size = 2):\n",
-    "    index = 0\n",
-    "    total = len(arr)\n",
-    "    def get_next_batch():\n",
-    "        nonlocal index\n",
-    "        if index >= total:\n",
-    "            return None\n",
-    "        end = min(index + batch_size , total)\n",
-    "        batch = arr[index : end]\n",
-    "        index = end\n",
-    "        return batch\n",
-    "    return get_next_batch\n",
-    "\n",
-    "\n",
-    "# def not_too_far(a , b, min = 0.1 , max = 1 ):\n",
-    "#     return min <= abs(a - b) <= max\n",
-    "\n",
-    "\n",
-    "# Y = w*X + b\n",
     "def find_wb(w=0.0, b=0.0, lr=0.1, epochs=1000):\n",
     "    for epoch in range(epochs):\n",
-    "        # batch_X = batch_loader(X_train, batch_size=64)\n",
-    "        # batch_Y = batch_loader(Y_train, batch_size=64)\n",
-    "        batch_X = batch_loader(X_train, batch_size=len(X_train))\n",
-    "        batch_Y = batch_loader(Y_train, batch_size=len(Y_train))\n",
+    "        Y_pred = X_train * w + b\n",
+    "        error = Y_train - Y_pred\n",
     "\n",
-    "        while True:\n",
-    "            X_batch = batch_X()\n",
-    "            Y_batch = batch_Y()\n",
-    "            if X_batch is None or Y_batch is None:\n",
-    "                break\n",
+    "        dw = -2 * np.mean(X_train * error)\n",
+    "        db = -2 * np.mean(error)\n",
     "\n",
-    "            Y_pred = X_batch * w + b\n",
-    "            error = Y_batch - Y_pred\n",
+    "        w -=  lr * dw\n",
+    "        b -=  lr * db\n",
     "\n",
-    "            dw = -2 * np.mean(X_batch * error)\n",
-    "            db = -2 * np.mean(error)\n",
-    "\n",
-    "            w -=  lr * dw\n",
-    "            b -=  lr * db\n",
-    "\n",
-    "        # Use MSE for better gradient tracking\n",
+    "        # For better gradient tracking i am using MSE \n",
     "        Y_pred_total = w * X_train + b\n",
     "        total_loss = np.mean((Y_train - Y_pred_total) ** 2)\n",
     "        print(f\"Epoch {epoch+1}: w={w:.4f}, b={b:.4f}, loss={total_loss:.4f}\")\n",
@@ -2613,40 +2605,42 @@
    "id": "676b7740",
    "metadata": {},
    "source": [
-    "Gradient Explanation for:\n",
-    "dw = -2 * np.mean(X_batch * error)\n",
+    "Gradient Explanation for:<br>\n",
+    "dw = -2 * np.mean(X_batch * error) <br>\n",
     "db = -2 * np.mean(error)\n",
     "\n",
     "The model is: Y_pred = w * X + b\n",
     "\n",
-    "The loss function is Mean Squared Error (MSE):\n",
-    "    Loss = (1/n) * Σ (Y - Y_pred)^2\n",
-    "         = (1/n) * Σ (Y - (w * X + b))^2\n",
+    "The loss function is Mean Squared Error (MSE):<br>\n",
+    "    Loss = (1/n) * Σ (Y - Y_pred)^2<br>\n",
+    "         = (1/n) * Σ (Y - (w * X + b))^2<br>\n",
     "\n",
     "To minimize this loss, we use gradient descent.\n",
     "That requires the partial derivatives of the loss\n",
     "with respect to w and b:\n",
     "\n",
-    "Gradient w.r.t weight (w):\n",
+    "Gradient w.r.t weight (w):<br>\n",
     "    dL/dw = -2 * mean(X * (Y - Y_pred))\n",
     "\n",
-    "Gradient w.r.t bias (b):\n",
+    "Gradient w.r.t bias (b):<br>\n",
     "    dL/db = -2 * mean(Y - Y_pred)\n",
     "\n",
     "In code:\n",
+    "```python\n",
     "    error = Y_batch - Y_pred\n",
     "    dw = -2 * np.mean(X_batch * error)\n",
     "    db = -2 * np.mean(error)\n",
+    "```\n",
     "\n",
     "These gradients point in the direction of increasing loss,\n",
-    "so we subtract them during the update:\n",
-    "    w = w - lr * dw\n",
-    "    b = b - lr * db\n"
+    "so we subtract them during the update:<br>\n",
+    "    w = w - lr * dw<br>\n",
+    "    b = b - lr * db<br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "id": "05935cfa",
    "metadata": {},
    "outputs": [],
@@ -2656,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "id": "04ea3f84",
    "metadata": {},
    "outputs": [
