--- a/ML-Scratch/multiple-LR-numpy.ipynb
+++ b/ML-Scratch/multiple-LR-numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "dfbff594",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "da836fe2",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "[1067 rows x 13 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "da365539",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "dc595edd",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "[1067 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "3f3a277e",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "6641caa1",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "7d6cfcda",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_5340\\1150630520.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_17816\\1150630520.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -645,7 +645,7 @@
        "max    3.570937e+00  3.453875e+00          4.081308e+00  3.659012e+00"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "c005e705",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "9ee44a1e",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "id": "72c6cfae",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "id": "6bc46040",
    "metadata": {},
    "outputs": [],
@@ -750,30 +750,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "b8823fca",
+   "cell_type": "markdown",
+   "id": "73a928a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_test shape: (214, 3)\n",
-      "Y_test shape: (214,)\n",
-      "Y_pred shape: (214, 3)\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"X_test shape:\", X_test.shape)\n",
-    "print(\"Y_test shape:\", Y_test.shape)\n",
-    "print(\"Y_pred shape:\", Y_pred.shape)"
+    "Calculate RMSE(Root Mean Squared Error)\n",
+    "The RMSE is a commonly used metric to measure the difference between values predicted by a model and the actual values.\n",
+    "\n",
+    "The formula for RMSE is:\n",
+    "\n",
+    "$$\n",
+    "\\text{RMSE} = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2 }\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "- \\( y_i \\) = actual value\n",
+    "- \\( hat{y}_i \\) = predicted value\n",
+    "- \\( n \\) = number of observations\n",
+    "\n",
+    "*If your RMSE on training is low but high on test → overfitting.*<br>\n",
+    "*If RMSE is high on both → underfitting or bad features.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
+   "id": "8f3be70f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.06420273964216519)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(np.mean(((Y_test - np.mean(Y_pred)) ** 2 )/ Y_test.shape[0]))\n",
+    "rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "66467fa6",
    "metadata": {},
    "outputs": [
